tests/fixtures/errors/PROFILE_METADATA_MISMATCH__B.tsl
DROP minecraft:dye 2 5
 ON Donation
